Aggiunto Use Case 2

--- a/ConsigliaViaggi19/ConsigliaViaggi19.csproj
+++ b/ConsigliaViaggi19/ConsigliaViaggi19.csproj
@@ -60,8 +60,10 @@
     <Compile Include="MenuPrincipale.Designer.cs">
       <DependentUpon>MenuPrincipale.cs</DependentUpon>
     </Compile>
+    <Compile Include="ParametriRicercaStrutture.cs" />
     <Compile Include="Queries.cs" />
     <Compile Include="Recensione.cs" />
+    <Compile Include="Struttura.cs" />
     <Compile Include="VisualizzaRecensione.cs">
       <SubType>Form</SubType>
     </Compile>
